fixed UI minor problem with z-index

--- a/AIPL_WEB_ERP/AIPL/FrontEnd/static/css/navbar.css
+++ b/AIPL_WEB_ERP/AIPL/FrontEnd/static/css/navbar.css
@@ -301,6 +301,7 @@
     .option.active,
     .optionSecond.active {
       right: 0;
+      z-index: 100;
     }
   
     .option ul,
